main-container.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multibot
  labels:
    name: multibot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: multibot
  name: main-container
  labels:
    app: main-container
    logging: my_group
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main-container
  template:
    metadata:
      labels:
        app: main-container
        logging: my_group
    spec:
      serviceAccountName: main-container-account
      containers:
      - name: main-container
        image: ${IMAGE}
        imagePullPolicy: ${IMAGE_PULL_POLICY}
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 400m
            memory: 256Mi
        ports:
        - containerPort: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  namespace: multibot
  name: main-container-svc
spec:
  selector:
    app: main-container
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 80
  type: ${SERVICE_TYPE}
