state-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: state-db
  namespace: multibot
  labels:
    app: state-db
    logging: my_group
spec:
  replicas: 1
  selector:
    matchLabels:
      app: state-db
  template:
    metadata:
      labels:
        app: state-db
        logging: my_group
    spec:
      containers:
      - name: state-db
        image: "valkey/valkey:alpine"
        command: ["valkey-server", "--requirepass", "$(STATE_DB_PASSWORD)"]
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: state-db
  namespace: multibot
spec:
  selector:
    app: state-db
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
  type: ClusterIP
